add project and user

--- a/package.json
+++ b/package.json
@@ -17,9 +17,16 @@
         "laravel-vite-plugin": "^1.0.1",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
-        "resolve-url-loader": "^5.0.0",
+        "resolve-url-loader": "^3.1.2",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
-        "vite": "^5.0.12"
+        "vite": "^5.0.12",
+        "vue": "^2.6.12",
+        "vue-loader": "^15.9.8",
+        "vue-template-compiler": "^2.6.12"
+    },
+    "dependencies": {
+        "vue-axios": "^3.5.2",
+        "vue-router": "^4.2.5"
     }
 }
